# TraceStorm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test_oai.py
.github/workflows/: publish.yml  test.yml
.github/workflows/scripts/: create_release.js
examples/: datasets_config_chatbot_arena.json  datasets_config_default.json  datasets_config_hf.json  datasets_config_local.json  datasets_config_longbench.json  datasets_config_sharegpt.json  save_test_datasets.py
tests/: test_cli.py  test_data_loader.py  test_replayer.py  test_round_robin_shard.py  test_trace_base.py  test_trace_generator.py  test_trace_loader.py
trace_storm/: logger.py  main.py  request_generator.py  result_analyzer.py  trace_generator.py  trace_player.py
tracestorm/: cli.py  constants.py  core.py  data_loader.py  main.py  plot_cdfs.py  request_generator.py  result_analyzer.py  trace_base.py  trace_generator.py  trace_loader.py  trace_player.py  utils.py
tracestorm/datasets_config/: datasets_config_hf.json  datasets_config_local.json  datasets_config_missing.json
tracestorm_results/20250708_184121/: results_original.json
tracestorm_results/chatbot_arena/: results_local.json  results_remote.json
