[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracestorm"
version = "0.0.3"
description = "A tool for generating and replaying traces of requests to OpenAI API endpoints"
readme = "README.md"
authors = [
    {name = "Yao Fu", email = "yao.fu.aisys@gmail.com"}
]

dependencies = [
    "openai>=1.58.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.9",
    "click>=8.1.8"
]
requires-python = ">=3.9"

[project.scripts]
tracestorm = "tracestorm.cli:main"

[tool.ruff]
line-length = 80
exclude = []

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = [
    "F405",  # star imports
    "F403",  # lambda expression assignment
    "E731",  # Loop control variable not used within loop body
    "B007",  # raise distinguish errors
    "B904",  # f-string format
    "UP032",
]
select = ["I"]  # isort
ignore = ["B007"]  # Loop control variable not used within loop body

[tool.isort]
use_parentheses = true
skip_gitignore = true

[tool.setuptools]
packages = { find = { exclude = ["examples"] } }
